--- a/js/langs/en.json
+++ b/js/langs/en.json
@@ -2,7 +2,7 @@
   "contactInfo": {
     "name": "Jingtong (Jensen Arcueid) Peng",
     "position": "Software Engineer",
-    "profilePicture": "icons/profile.jpg",
+    "profilePicture": "icons/profile.png",
     "websites": [
       { "name": "Portfolio", "url": "https://www.arcueidshiki.uk/" },
       {
