--- a/js/langs/jp.json
+++ b/js/langs/jp.json
@@ -1,7 +1,7 @@
 {
     "name": "ペン ジントン (Jensen Arcueid)",
     "position": "ソフトウェアエンジニア",
-    "profilePicture": "icons/profile.jpg",
+    "profilePicture": "icons/profile.png",
     "websites": [
       { "name": "ポートフォリオ", "url": "https://portfolio.example.com" },
       { "name": "ブログ", "url": "https://blog.example.com" }
