--- a/js/langs/zh-new.json
+++ b/js/langs/zh-new.json
@@ -60,7 +60,7 @@
       {
         "position": "医疗IT支持实习生",
         "company": "圣约翰医院",
-        "icon": "icons/company/sjog.jpg",
+        "icon": "icons/company/sjog.png",
         "duration": "2024年7月 - 2024年9月",
         "location": "澳大利亚珀斯",
         "description": [
