--- a/js/langs/paints-en.json
+++ b/js/langs/paints-en.json
@@ -5,7 +5,8 @@
     "targetColor": "Target Color",
     "gridSize": "Grid Size",
     "colorCount": "Color Count",
-    "instruction": "Select a color then click a cell to paint",
+    "instruction": "Select a color and click a cell to paint",
+    "gridSizeSlider": "Adjust Grid Size",
     "colorNames": ["Yellow", "Red", "Blue", "Green"]
   },
   "buttons": {
@@ -15,6 +16,8 @@
   },
   "messages": {
     "success": "Congratulations! You completed the flood fill puzzle! 🎉",
-    "failure": "Game Over! You ran out of moves, try again! 😔"
+    "failure": "Game over! You ran out of moves, try again! 😔",
+    "selectColor": "Please select a color first!",
+    "sameColor": "Cell is already this color!"
   }
 }
