--- a/js/langs/jp.json
+++ b/js/langs/jp.json
@@ -1,16 +1,276 @@
 {
-    "name": "ペン ジントン (Jensen Arcueid)",
+  "contactInfo": {
+    "name": "彭靖桐 (Jensen Arcueid)",
     "position": "ソフトウェアエンジニア",
     "profilePicture": "icons/profile.png",
     "websites": [
-      { "name": "ポートフォリオ", "url": "https://portfolio.example.com" },
-      { "name": "ブログ", "url": "https://blog.example.com" }
+      { "name": "ポートフォリオ", "url": "https://www.arcueidshiki.uk/" },
+      {
+        "name": "ベストアジャイルプラクティス&履歴書",
+        "url": "https://cv.arcueidshiki.uk/"
+      }
     ],
     "phone": ["+61 413993029", "+86 15776692817"],
     "email": ["24323312@student.uwa.edu.au", "pengjingtong@pku.edu.cn"],
     "socialLinks": [
-      { "icon": "fab fa-linkedin", "url": "https://linkedin.com/in/johndoe" },
-      { "icon": "fab fa-github", "url": "https://github.com/johndoe" },
-      { "icon": "fab fa-twitter", "url": "https://twitter.com/johndoe" }
+      {
+        "icon": "icons/email.png",
+        "url": "mailto:24323312@student.uwa.edu.au"
+      },
+      {
+        "icon": "icons/linkedin.svg",
+        "url": "https://www.linkedin.com/in/jingtong-peng-3068672b6/"
+      },
+      {
+        "icon": "icons/github.svg",
+        "url": "https://github.com/ArcueidShiki"
+      },
+      { "icon": "icons/logo.png", "url": "https://www.arcueidshiki.uk/" }
+    ]
+  },
+  "profile": {
+    "title": "プロフィール",
+    "content": [
+      "C++開発、バックエンドシステム、フルスタックアプリケーションの豊富な経験を持つ結果重視のソフトウェアエンジニア。",
+      "華為で1.5年以上の経験を持ち、パフォーマンス最適化、デバッグツール、システムアーキテクチャを専門とする。",
+      "現在、UWAで情報技術修士課程を履修中で、オーストラリアでソフトウェアエンジニアのポジションを求めている。スケーラブルで効率的で革新的なソリューションの構築に情熱を持っている。"
+    ]
+  },
+  "workexperience": {
+    "title": "職歴",
+    "content": [
+      {
+        "position": "ターミナルソフトウェアエンジニア",
+        "company": "華為技術有限公司",
+        "icon": "icons/company/huawei.png",
+        "duration": "2022年09月 - 2024年02月",
+        "location": "中国 北京",
+        "description": [
+          "C++、Python、Bashを使用してHarmonyOS用のデバッグとパフォーマンスチューニングツール（Hiperf）を開発・保守。",
+          "クラッシュ分析ツールを強化し、スタック連結とFlame Graphビジュアライゼーションを実装し、デバッグ時間を40％削減。",
+          "CPU/メモリパフォーマンス評価の自動テストスクリプトを設計し、システム効率を向上。",
+          "大規模開発環境でGit/Repoベースのリポジトリを管理。"
+        ]
+      }
+    ]
+  },
+  "projects": {
+    "title": "プロジェクト",
+    "content": [
+      {
+        "name": "株式ペーパートレーディング",
+        "link": "https://github.com/ArcueidShiki/DataAnalyticsApplication",
+        "description": "米国株式市場のペーパートレーディングWebアプリケーション",
+        "technologies": ["Flask", "Sqlalchemy", "Echarts", "bootstrap", "JWT"]
+      },
+      {
+        "name": "Hiperf",
+        "link": "https://gitee.com/openharmony/developtools_hiperf",
+        "description": "HarmonyOSシステムパフォーマンスデバッグツール",
+        "technologies": ["C/C++", "LinuxPerf", "AOSP", "Python", "ADB"]
+      },
+      {
+        "name": "リモートコントロール",
+        "link": "https://github.com/ArcueidShiki/RemoteControl",
+        "description": "Windowsリモートコントロールアプリケーション、画面監視、キーボードとマウス制御",
+        "technologies": ["C/C++", "TCP/IP", "MFC", "IOCP", "QT"]
+      }
+    ]
+  },
+  "skills": {
+    "title": "スキル",
+    "content": [
+      {
+        "category": "プログラミング言語",
+        "items": [
+          { "name": "C", "iconUrl": "https://skillicons.dev/icons?i=c" },
+          { "name": "C++", "iconUrl": "https://skillicons.dev/icons?i=cpp" },
+          { "name": "Bash", "iconUrl": "https://skillicons.dev/icons?i=bash" },
+          {
+            "name": "JavaScript",
+            "iconUrl": "https://skillicons.dev/icons?i=js"
+          },
+          { "name": "Python", "iconUrl": "https://skillicons.dev/icons?i=py" },
+          { "name": "Java", "iconUrl": "https://skillicons.dev/icons?i=java" },
+          {
+            "name": "TypeScript",
+            "iconUrl": "https://skillicons.dev/icons?i=ts"
+          }
+        ]
+      }
+    ]
+  },
+  "education": {
+    "title": "学歴",
+    "content": [
+      {
+        "degree": "情報技術修士",
+        "major": "ソフトウェア工学・データサイエンス",
+        "institution": "西オーストラリア大学",
+        "school": "物理学・数学・計算学部",
+        "logo": "icons/edu/uwa.png",
+        "location": "オーストラリア パース",
+        "startDate": "2024年2月",
+        "endDate": "2025年12月",
+        "year": "2024年02月 - 2025年12月",
+        "status": "在学中",
+        "gpa": "優秀平均",
+        "relevantCourses": [
+          "高度アルゴリズム",
+          "機械学習",
+          "ソフトウェア工学",
+          "データベースシステム",
+          "サイバーセキュリティ"
+        ]
+      },
+      {
+        "degree": "薬修士（未完了）",
+        "major": "薬学",
+        "institution": "北京大学",
+        "school": "北京大学医学部",
+        "logo": "icons/edu/pku.png",
+        "location": "中国 北京",
+        "startDate": "2019年9月",
+        "endDate": "2021年9月",
+        "year": "2019年09月 - 2021年09月",
+        "status": "中退",
+        "note": "テクノロジーキャリアを追求するため転向"
+      },
+      {
+        "degree": "薬学士",
+        "major": "薬学",
+        "institution": "ハルビン医科大学",
+        "school": "薬学院",
+        "logo": "icons/edu/hmu.png",
+        "location": "中国 ハルビン",
+        "startDate": "2015年9月",
+        "endDate": "2019年7月",
+        "year": "2015年09月 - 2019年07月",
+        "status": "卒業",
+        "gpa": "3.6/4.0",
+        "honors": ["学部長賞", "優秀卒業生"],
+        "relevantCourses": ["薬化学", "薬理学", "薬用化学", "薬物分析"]
+      }
+    ]
+  },
+  "languages": {
+    "title": "言語",
+    "content": [
+      { "language": "英語", "proficiency": "流暢" },
+      { "language": "中国語", "proficiency": "母国語" },
+      { "language": "日本語", "proficiency": "基礎" }
+    ]
+  },
+  "internships": {
+    "title": "インターンシップ経験",
+    "content": [
+      {
+        "position": "ヘルスケアITサポートインターン",
+        "company": "聖ヨハネ病院",
+        "icon": "icons/company/sjog.jpg",
+        "duration": "2024年7月 - 2024年9月",
+        "location": "オーストラリア パース",
+        "description": [
+          "病院ITシステムと医療機器の技術サポートを提供。",
+          "電子健康記録とデータベースシステムの維持を支援。",
+          "医療専門家と協力してシステム問題を解決。",
+          "新しい医療技術とソフトウェア更新の実装をサポート。"
+        ]
+      }
+    ]
+  },
+  "hackathons": {
+    "title": "ハッカソンとコンペティション",
+    "content": [
+      {
+        "event": "2024年住宅危機ハッカソン",
+        "position": "🏆 第3位入賞者",
+        "location": "オーストラリア パース",
+        "date": "2024年11月",
+        "project": "住宅危機解決策",
+        "description": [
+          "50以上のチーム中第3位を獲得し、住宅負担可能性危機に対する革新的なデータ駆動型解決策を提供",
+          "PythonとMachine Learningを使用して住宅市場トレンドを予測する予測分析モデルを開発",
+          "Streamlitを使用してリアルタイム住宅データの可視化とインサイトのためのインタラクティブダッシュボードを作成",
+          "48時間の制約内で多様なチームと協力して包括的なソリューションを提供"
+        ],
+        "links": {
+          "github": "https://github.com/SeiKasahara/HousingCrisisSolution",
+          "linkedin": "https://lnkd.in/p/ervBzHPg"
+        }
+      }
+    ]
+  },
+  "projects": {
+    "title": "プロジェクト",
+    "content": [
+      {
+        "name": "AuraWell Agent",
+        "link": "https://github.com/PrescottClub/AuraWell_Agent.git",
+        "description": "個人化された健康推奨とメンタルウェルネスサポートを提供するAI駆動のウェルネスコンパニオン。",
+        "technologies": ["Python", "機械学習", "NLP", "FastAPI", "React"]
+      },
+      {
+        "name": "住宅危機解決策",
+        "link": "https://github.com/SeiKasahara/HousingCrisisSolution",
+        "description": "🏆 第3位入賞者 - データ駆動型インサイトと予測分析を使用して住宅負担可能性危機に対処するハッカソンソリューション。",
+        "technologies": [
+          "Python",
+          "データ分析",
+          "機械学習",
+          "Streamlit",
+          "PostgreSQL"
+        ]
+      },
+      {
+        "name": "株式ペーパートレーディング",
+        "link": "https://github.com/ArcueidShiki/DataAnalyticsApplication",
+        "description": "米国株式市場ペーパートレーディングWebアプリケーション",
+        "technologies": ["Flask", "Sqlalchemy", "Echarts", "bootstrap", "JWT"]
+      },
+      {
+        "name": "Hiperf",
+        "link": "https://gitee.com/openharmony/developtools_hiperf",
+        "description": "HarmonyOSシステムパフォーマンスデバッグツール。",
+        "technologies": ["C/C++", "LinuxPerf", "AOSP", "Python", "ADB"]
+      },
+      {
+        "name": "リモートコントロール",
+        "link": "https://github.com/ArcueidShiki/RemoteControl",
+        "description": "Windowsリモートコントロールアプリケーション、画面監視、キーボードとマウスコントロール。",
+        "technologies": ["C/C++", "TCP/IP", "MFC", "IOCP", "QT"]
+      },
+      {
+        "name": "Penni",
+        "link": "https://github.com/codersforcauses/penni",
+        "description": "退職者がアルバイトを見つけるのを支援するモバイルアプリケーション。",
+        "technologies": ["React", "Nextjs", "TailwindCss", "NPM"]
+      },
+      {
+        "name": "IoTスマートエントリーシステム",
+        "link": "https://github.com/ArcueidShiki/SmartEntrySystem",
+        "description": "エントリーコントロール用のIoTベースの顔認識システム。",
+        "technologies": ["RaspberryPi", "OpenCV", "Flask", "MQTT", "Tensorflow"]
+      },
+      {
+        "name": "ベストアジャイルプラクティス＆CV",
+        "link": "https://github.com/ArcueidShiki/bpcv",
+        "description": "学生がCVを作成するのを支援する大学の個人プロジェクト。",
+        "technologies": [
+          "HTML",
+          "CSS",
+          "JavaScript",
+          "jQuery",
+          "WebGL",
+          "OpenGL Shader"
+        ]
+      },
+      {
+        "name": "ポートフォリオ",
+        "link": "https://www.arcueidshiki.uk/",
+        "description": "私のプロジェクトとスキルを紹介する個人ポートフォリオサイト。",
+        "technologies": ["Threejs", "Vite", "Blender"]
+      }
     ]
   }
+}
